sass/layouts/_news.scss
.news {
  .news__header {
    position: relative;
    text-align: center;
    .image-full {
      background-image: url(../../images/bg-news.jpeg);
      background-size: cover;
      background-position: center;
      max-width: 100%;
      min-height: 225px;
      display: block;
      @include Responsive(MD) {
        display: none;
      }
    }
    .image-tablet {
      display: none;
      @include Responsive(MD) {
        background-image: url(../../images/bg-news-responsive.jpeg);
        background-size: cover;
        background-position: center;
        max-width: 100%;
        min-height: 225px;
        display: block;
      }
    }
    .news__header-text {
      position: absolute;
      width: 100%;
      font-size: 100px;
      color: white;
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);
      padding: 40px 0;

      h1 {
        font-size: 60px;
        line-height: 72px;
        font-weight: 600;
        @include resNormal($computer) {
          font-size: 50px;
          line-height: 60px;
        }
        @include resNormal(tablet) {
          font-size: 44px;
          line-height: 52px;
        }
        @include Responsive(MD) {
          font-size: 36px;
          line-height: 44px;
        }
      }
      p {
        padding-top: 16px;
        font-size: 16px;
        letter-spacing: 1px;
      }
    }
  }

  .news__content {
    .row {
      .col {
        padding-right: 0;
        padding-left: 0;
        overflow: hidden;
      }
    }
    a {
      img {
        width: 100%;
        object-fit: contain;
        vertical-align: middle;
        transition: all 0.5s;
      }
      color: white;
      overflow: hidden;
      display: block;
      position: relative;
      &:hover {
        img {
          transform: scale(1.1);
        }
      }
    }
    .item__overlay {
      background: rgba(0, 9, 91, 0.9);
      border: none;
      .item__content {
        padding: 16px;
        font-size: 14px;
        line-height: 24px;
        border: none;
        position: absolute;
        bottom: 0;
        left: 0;
        width: 100%;
        background: rgba(0, 9, 91, 0.9);
        .new-icon {
          margin-left: 10px;
        }
      }
    }
  }
  .view-all-mobile {
    display: none;
    text-align: center;
    padding: 15px 0;
    cursor: pointer;
    width: 100%;
    @include Responsive(MD) {
      display: block;
      padding: 24px 0;
      background-color: #f2f2f2;
      .toggle {
        text-align: center;
        &:before {
          content: "View All"+"  "+"\f055";
          font-family: "Font Awesome 5 Free","FontAwesome",'fordngbs-antenna-cond-regular','fordngbs-antenna-re',arial,helvetica,sans-serif;
          font-size: 18px;
          line-height: 1;
          letter-spacing: 1px;
          font-weight: 400;
          color: $second-color;
        }
        i{
          margin-left: 3px;
          font-size: 15px;
          color: $second-color;
        }
      }
    }
    &.active .toggle::before {
      content: "View Less"+"  "+"\f056";
      font-family: "Font Awesome 5 Free","FontAwesome",'fordngbs-antenna-cond-regular','fordngbs-antenna-re',arial,helvetica,sans-serif;
      color: $second-color;
      display: inline;
      font-weight: 400;
      font-size: 18px;
      line-height: 1;
      letter-spacing: 1px;
    }
  }
  .row-hidden-mobile {
    @include Responsive(MD) {
      transition: max-height 0.2s;
    }
  }
}

